移植链接处理器解析服务到 1.12.2 / Port linked handler resolution service to 1.12.2